--- a/beckn_implementation/BPP/client/config/default.yaml
+++ b/beckn_implementation/BPP/client/config/default.yaml
@@ -1,6 +1,6 @@
 # Mandatory
 server:
-  port: 5012
+  port: 5013
 
 # Mandatory.
 cache:
@@ -40,7 +40,7 @@ app:
   # Two types of gateway mode present.
   # client and network.
   gateway:
-    mode: network
+    mode: client
     inboxQueue: "inbox"
     outboxQueue: "outbox"
     amqpURL: "amqp://tvast:password@127.0.0.1:5673"
@@ -85,13 +85,13 @@ app:
   publicKey: "QRd3B8t4i53JwelSLERJzUK6+Ybgh5pb1TKAXKSTIUk="
 
   # Mandatory.
-  subscriberId: "mulearn-hackninjas-bpp"
-  subscriberUri: "https://mulearn-hackninjas-bpp.loca.lt"
+  subscriberId: "knv2_participant_bpp.dsep:talent.BPP"
+  subscriberUri: "https://knv2-bpp.loca.lt"
   
   # Mandatory.
   registryUrl: https://registry.becknprotocol.io/subscribers
-  auth: true
-  uniqueKey: "mulearn-hackninjas-bpp-key"
+  auth: false
+  uniqueKey: "knv2-bpp-key"
   
   # Mandatory.
   city: "std:080"
