--- a/beckn_implementation/BPP/webhook/.env
+++ b/beckn_implementation/BPP/webhook/.env
@@ -1,2 +1,2 @@
-SANDBOXURL=http://127.0.0.1:3000
-BPPCLIENTURL=http://127.0.0.1:6001
+SANDBOXURL=https://mulearn.org
+BPPCLIENTURL=https://knv2-bpp-client.loca.lt
